Fix up readwrite of files, prepare HealthData after stats